tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-import-alias.wyst
module demo
import library as widen
